stylesheets: Fix color contrasts

--- a/app/assets/stylesheets/active_admin/_header.scss
+++ b/app/assets/stylesheets/active_admin/_header.scss
@@ -79,7 +79,7 @@
       }
 
       &.has_nested.current > a {
-        background: $current-menu-item-background image-url('active_admin/nested_menu_arrow_dark.gif') no-repeat calc(100% - 7px) 50%;
+        background: $current-menu-item-background image-url('active_admin/nested_menu_arrow.gif') no-repeat calc(100% - 7px) 50%;
         padding-right: 20px;
       }
 
@@ -89,9 +89,9 @@
       }
 
       &.has_nested:hover > a {
-        @include rounded-top(10px);
+        @include rounded-top(2px);
         border-bottom: 5px solid $hover-menu-item-background;
-        background: $hover-menu-item-background image-url('active_admin/nested_menu_arrow_dark.gif') no-repeat calc(100% - 7px) 50%;
+        background: $hover-menu-item-background image-url('active_admin/nested_menu_arrow.gif') no-repeat calc(100% - 7px) 50%;
         z-index: 1020;
       }
 
@@ -101,7 +101,7 @@
       /* Drop down menus */
       ul {
         background: $hover-menu-item-background;
-        @include rounded-all(0,10px,10px,10px);
+        @include rounded-all(0,2px,2px,2px);
         @include shadow(0, 1px, 3px, #444);
         position: absolute;
         width: 120%;
